feat: update UI text to English and improve validation messages